--- a/practica-js/index.html
+++ b/practica-js/index.html
@@ -20,6 +20,7 @@
             <button id="btnAreaCuadrado" type="button" onclick="calcularAreaCuadrado()">Área</button>
         </form>
     </section>
-    <script src="./main.js"></script>
+    <!--<script src="./main.js"></script>-->
+    <script src="./isoceles.js"></script>
 </body>
 </html>
